# synapse-auto-accept-invite

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
scripts-dev/: lint.sh
synapse_auto_accept_invite/: __init__.py
tests/: __init__.py  test_accept_invite.py  test_example.py
