[metadata]
name = synapse_auto_accept_invite
description = "Synapse module to automatically accept invites"
long_description = file: README.md
long_description_content_type=text/markdown
version = 1.1.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only


[options]
python_requires = >= 3.7


[options.extras_require]
dev =
  # for tests
  matrix-synapse >= 1.57.0
  tox
  twisted
  aiounittest
  attrs
  frozendict
  # for type checking
  mypy == 0.931
  types-frozendict
  # for linting
  black == 22.3.0
  flake8 == 4.0.1
  isort == 5.9.3


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501
